Fix aria and layout issues with the overlay.

--- a/css/index.css
+++ b/css/index.css
@@ -222,6 +222,13 @@ article {
 }
 
 /* Popup box BEGIN */
+.message-history-area {
+   width: 100%;
+   height: 85%;
+   border-width: 0px;
+   display:none; 
+}
+
 .message-log-area {
    width: 100%;
    height: 85%;
@@ -248,6 +255,13 @@ article {
 
 .message-log-area__table td pre {
    margin: .25em 0px;
+}
+
+.overlay-text-chat {
+   text-align: left;
+}
+.overlay-color-change {
+   text-align: left;
 }
 .accessory-overlay {
    background:rgba(0,0,0,.4);
@@ -302,9 +316,26 @@ article {
 .accessory-overlay-description {
    line-height: 1.5em;
 }
-.accessory-overlay-input-area {
-   vertical-align: middle;
+
+.accessory-overlay-input-area label {
+   display: block;
+   color: darkgrey;
 }
+
+.overlay-text-chat-input {
+   display: block;
+   margin: 10px 0 10px 0;
+   width: 80%;
+}
+
+.overlay-color-change-input {
+   display: block;
+   height: 50px;
+   width: 50px;
+   margin: 5px 0 5px 0;
+
+}
+
 .accessory-overlay__close-button:hover {
    background-color: #ccc;
 }
